objects/Reservable_Hold__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reservable Holds</relationshipLabel>
        <relationshipName>Reservable_Holds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Hold Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Reservable Holds</relationshipLabel>
        <relationshipName>Reservable_Holds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_UUID__c</fullName>
        <label>Company UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_UUID__c</fullName>
        <label>Contact UUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reservable Holds</relationshipLabel>
        <relationshipName>Reservable_Holds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_User_Role__c</fullName>
        <description>Role of custom "Created By User" field</description>
        <formula>created_by_id__r.UserRole.Name</formula>
        <inlineHelpText>Role of custom "Created By User" field</inlineHelpText>
        <label>Created By User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_From__c</fullName>
        <description>Source - from what system was the hold created</description>
        <label>Created From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_Period__c</fullName>
        <description>Hold Start Date to Hold End Date</description>
        <formula>CASE(
  MONTH( starts_at__c ),
  1, "Jan",
  2, "Feb",
  3, "Mar",
  4, "Apr",
  5, "May",
  6, "Jun",
  7, "Jul",
  8, "Aug",
  9, "Sep",
  10, "Oct",
  11, "Nov",
  "Dec"
)

&amp; ' ' &amp;

TEXT(DAY(starts_at__c))

&amp; ', ' &amp;

TEXT(YEAR(starts_at__c)) 

&amp; ' to ' &amp;

CASE(
  MONTH( expires_at__c ),
  1, "Jan",
  2, "Feb",
  3, "Mar",
  4, "Apr",
  5, "May",
  6, "Jun",
  7, "Jul",
  8, "Aug",
  9, "Sep",
  10, "Oct",
  11, "Nov",
  "Dec"
)

&amp; ' ' &amp;

TEXT(DAY(expires_at__c)) 

&amp; ', ' &amp;

TEXT(YEAR(expires_at__c))</formula>
        <inlineHelpText>Hold Start Date to Hold End Date</inlineHelpText>
        <label>Hold Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Created_By__c</fullName>
        <formula>IF(   created_by_id__r.Id  = $User.Id , true, false)</formula>
        <label>Is Created By</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Opp_Owner__c</fullName>
        <formula>IF(  Opportunity__r.OwnerId  = $User.Id , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Opportunity Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Of_Between_Days__c</fullName>
        <description>This field is used to get no.of days between start and expire date</description>
        <formula>expires_at__c  -  starts_at__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hold Length (In Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_For_Related_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field is used to show active hold records on opportunity page layouts related list.No need to display on pagelayout</description>
        <label>Opportunity For Related List</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Active Holds</relationshipLabel>
        <relationshipName>Reservable_Holds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reservable_Holds2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>All Holds</relationshipLabel>
        <relationshipName>Reservable_Holds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Opportunity__r.Region_Name__c</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reminder_After_21_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to send reminder after 21 days.This field is checked by time based workflow if reservable is still on hold for 21 days.</description>
        <label>Reminder After 21 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Removed_From__c</fullName>
        <description>Source - from what system was the source removed</description>
        <label>Removed From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservable_For_Related_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used for show active Reservable Hold records on reservable Layout.No need to show on page layouts.</description>
        <label>Reservable For Related List</label>
        <referenceTo>Reservable__c</referenceTo>
        <relationshipLabel>Active Holds</relationshipLabel>
        <relationshipName>Reservable_Holds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reservable_Type__c</fullName>
        <label>Reservable_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hot Desk</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reservable_UUID__c</fullName>
        <label>Reservable UUID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reservable</label>
        <referenceTo>Reservable__c</referenceTo>
        <relationshipLabel>Reservable Holds</relationshipLabel>
        <relationshipName>Reservable_Holds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Reminder_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to send reminder email after 21 days if reservable status is still on hold</description>
        <label>Send Reminder Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>created_by_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will contain the user name who has created the office hold record</description>
        <label>Created By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reservable_Holds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>expires_at__c</fullName>
        <label>Expires At</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>removed_at__c</fullName>
        <label>Removed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>removed_by_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Removed By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reservable_Holds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>removed_by_method__c</fullName>
        <label>Removed By Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>paperwork</fullName>
                </value>
                <value>
                    <fullName>manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>starts_at__c</fullName>
        <label>Starts At</label>
        <type>Date</type>
    </fields>
    <label>Reservable Hold</label>
    <nameField>
        <displayFormat>RH{000000}</displayFormat>
        <label>Hold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservable Holds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>Active_Holds_China</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>expires_at__c</columns>
        <columns>No_Of_Between_Days__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reservable__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>created_by_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>contains</operation>
            <value>China</value>
        </filters>
        <label>Active Holds - China</label>
    </listViews>
    <listViews>
        <fullName>Active_Holds_Europe_Israel_Australia</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>expires_at__c</columns>
        <columns>No_Of_Between_Days__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reservable__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>created_by_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>contains</operation>
            <value>Europe</value>
        </filters>
        <label>Active Holds - Europe, Israel, Australia</label>
    </listViews>
    <listViews>
        <fullName>Active_Holds_Japan</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>expires_at__c</columns>
        <columns>No_Of_Between_Days__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reservable__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>created_by_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <label>Active Holds - Japan</label>
    </listViews>
    <listViews>
        <fullName>Active_Holds_Latin_America</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>expires_at__c</columns>
        <columns>No_Of_Between_Days__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reservable__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>created_by_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Latin America</value>
        </filters>
        <label>Active Holds - Latin America</label>
    </listViews>
    <listViews>
        <fullName>Active_Holds_Pacific</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>expires_at__c</columns>
        <columns>No_Of_Between_Days__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reservable__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>created_by_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>Pacific</value>
        </filters>
        <label>Active Holds - Pacific</label>
    </listViews>
    <listViews>
        <fullName>Active_Holds_US_Canada_East</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>expires_at__c</columns>
        <columns>No_Of_Between_Days__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reservable__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>created_by_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>US &amp; Can - East</value>
        </filters>
        <label>Active Holds - US &amp; Canada East</label>
    </listViews>
    <listViews>
        <fullName>Active_Holds_US_Canada_West</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>expires_at__c</columns>
        <columns>No_Of_Between_Days__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reservable__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>created_by_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>US &amp; Can - West</value>
        </filters>
        <label>Active Holds - US &amp; Canada West</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Region__c</field>
            <operation>contains</operation>
            <value>India</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Holds</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>expires_at__c</columns>
        <columns>No_Of_Between_Days__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reservable__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>created_by_id__c</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>All Active Holds</label>
    </listViews>
    <listViews>
        <fullName>All_Holds</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>expires_at__c</columns>
        <columns>No_Of_Between_Days__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reservable__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>created_by_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Holds</label>
    </listViews>
    <listViews>
        <fullName>Inactive_Holds_Europe_Australia</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>expires_at__c</columns>
        <columns>No_Of_Between_Days__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reservable__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>created_by_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <filters>
            <field>Region__c</field>
            <operation>contains</operation>
            <value>Europe</value>
        </filters>
        <label>Inactive Holds - Europe Australia</label>
    </listViews>
    <listViews>
        <fullName>My_Active_Holds</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>expires_at__c</columns>
        <columns>No_Of_Between_Days__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reservable__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>created_by_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Hold</value>
        </filters>
        <filters>
            <field>Is_Created_By__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Is_Opp_Owner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Holds</label>
    </listViews>
    <listViews>
        <fullName>My_Holds</fullName>
        <booleanFilter>(1 OR 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>expires_at__c</columns>
        <columns>No_Of_Between_Days__c</columns>
        <columns>Approval_Status__c</columns>
        <columns>Reservable__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Account__c</columns>
        <columns>created_by_id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Created_By__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Is_Opp_Owner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Holds</label>
    </listViews>
</CustomObject>